tests/error/modifier_errors/flag_loop.err
Error: Invalid expression in dagger (at $FILE:9:4)
   | 
 7 | @guppy
 8 | def test() -> None:
 9 |     for _ in range(10):
   |     ^^^^^^^^^^^^^^^^^^^
10 |         pass
   | ^^^^^^^^^^^^ Loop found in a dagger context

Guppy compilation failed due to 1 previous error
